# eurlex-unit-parser

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  TODO.md  convert_links_csv.py  download_eurlex.py  parse_eu.py  pyproject.toml  requirements.txt  run_batch.py  test_coverage.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
data/: README.md  eurlex_links.jsonl  eurlex_test_links.csv  eurlex_test_links.jsonl
examples/: DORA.json
reports/: README.md
schemas/: eurlex-output.schema.json  eurlex-validation.schema.json
scripts/: generate_json_schemas.py
src/eurlex_unit_parser/: __init__.py  api.py  labels.py  models.py  text_utils.py
src/eurlex_unit_parser/batch/: __init__.py  links_convert.py  runner.py
src/eurlex_unit_parser/cli/: __init__.py  batch.py  coverage.py  download.py  parse.py
src/eurlex_unit_parser/coverage/: __init__.py  core.py  extract_html.py  extract_json.py  hierarchy.py  report.py
src/eurlex_unit_parser/download/: __init__.py  eurlex.py
src/eurlex_unit_parser/parser/: __init__.py  annex.py  citation_resolver.py  citations.py  consolidated.py  engine.py  enrichment.py  oj.py  state.py  tables.py  validation.py
src/eurlex_unit_parser/summary/: __init__.py  lsu.py
tests/: test_amending_regression.py  test_api_facade.py  test_batch_links_pipeline.py  test_batch_runner_failures.py  test_citation_resolver.py  test_citations.py  test_cli_parse_paths.py  test_document_title_parsing.py  test_download_eurlex_paths.py  test_enrichment.py  test_extract_html_helpers.py  test_json_schema_contract.py  test_json_schema_sync.py  test_legacy_compatibility.py  test_lsu_summary.py  test_parser_modular_regression.py  test_public_api.py
